# cpplight

./: .gitignore  CMakeLists.txt  LICENSE  cpplight  testcpplight
src/: cvmain.cpp  main.cpp  svpng.inc
src/shape/: Circle.cpp  Circle.h  HalfSpace.cpp  HalfSpace.h  IntersectShape.cpp  IntersectShape.h  Line.cpp  Line.h  Point.cpp  Point.h  Radial.cpp  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  SubtractShape.cpp  SubtractShape.h  UnionShape.cpp  UnionShape.h  Vector.cpp  Vector.h
src/shapes/: Circle.h  HalfSpace.cpp  HalfSpace.h  IntersectShape.h  Rectangle.cpp  Rectangle.h  SubtractShape.h  UnionShape.h
src/utils/: Point.h  Radial.cpp  Radial.h  Scene.h  Shape.cpp  Vector.h
test/: test.cpp
